--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -47,6 +47,11 @@
 }
 
 /* ---------- RESET & BASE ---------- */
+* {
+    user-select: none;
+    -webkit-user-select: none;
+    -ms-user-select: none;
+}
 *{margin:0;padding:0;box-sizing:border-box;}
 html,body{height:100%;}
 body{
